// If we did not define the syntax, it would take the syntax as proto2 by default
syntax = "proto3";

// This is where the autogenerated java classes are gonna be stored
package stubs.user;

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;

message LoginRequest{
  string cpr = 1;
  string password = 2;
}

message UserRequest{
  string cpr = 1;
}

message CreateUserRequest{
  string cpr = 1;
  string password = 2;
  string fullName = 3;
  string phoneNumber = 4;
  string email = 5;
  Type type = 6;
  double salary = 7;
  Address address = 8;
}

message UpdateUserRequest {
  string cpr = 1;
  string oldPassword = 2;
  string newPassword = 3;
  string fullName = 4;
  string phoneNumber = 5;
  string email = 6;
  double salary = 7;
  Address address = 8;
}

message UserResponse{
  string id = 1;
  string cpr = 2;
  string fullName = 3;
  string phoneNumber = 4;
  string email = 5;
  Type type = 6;
  double salary = 7;
  int32 age = 8;
  Address address = 9;
}

message LoginResponse {
  string token = 1;
}

enum Type {
  CUSTOMER = 0;
  EMPLOYEE = 1;
}

message Address {
  string number = 1;
  string street = 2;
  string city = 3;
  int32 zipcode = 4;
}

service UserService{
  rpc login(LoginRequest) returns (LoginResponse) {};
  rpc getUser(UserRequest) returns (UserResponse) {};
  rpc updateUser(UpdateUserRequest) returns (UserResponse) {};
  rpc createUser(CreateUserRequest) returns (UserResponse) {};
}